--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -83,7 +83,8 @@
                         <span class="text">Offers</span>
                     </a>
                     <div class="submenu">
-                        <a href="">Add Offers</a>
+                        <a href="/admin/offer/listOffer">List Offer</a>
+                        <a href="/admin/offer/addOffer">Add Offer</a>
                     </div>
                 </li>
                 
