--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -60,8 +60,33 @@
                                                                 </tr>
                                                             </tbody>
                                                         </table>
+                                                        
                                                     </div>
                                                     <!-- <a href="#" class="btn "> <i class="fi-rs-box-alt mr-10"></i> Proceed To CheckOut</a> -->
+                                                  
+                                                </div>
+                                                <div class="mb-30 mt-50">
+                                                    <div class="heading_s1 mb-3">
+                                                        <h4>Apply Coupon</h4>
+                                                    </div>
+                                                    <div class="total-amount">
+                                                        <div class="left">
+                                                            <div class="coupon">
+                                                                <form action="#" target="_blank">
+                                                                    <div class="form-row row justify-content-center">
+                                                                        <div class="form-group ">
+                                                                            <input class="font-medium" name="Coupon"
+                                                                                placeholder="Enter Your Coupon">
+                                                                        </div>
+                                                                        <div class="form-group ">
+                                                                            <button class="btn btn-primary btn-sm"><i
+                                                                                    class="fi-rs-label "></i>Apply</button>
+                                                                        </div>
+                                                                    </div>
+                                                                </form>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="col-lg-8 col-md-8 ">
@@ -147,6 +172,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        
                                         <div class="divider center_icon mt-50 mb-50"><i class="fi-rs-fingerprint"></i>
                                         </div>
 
@@ -159,32 +185,12 @@
                                             </div>
                                         </div>
 
-                                        <!-- <div class="mb-30 mt-50">
-                                <div class="heading_s1 mb-3">
-                                    <h4>Apply Coupon</h4>
-                                </div> -->
-                                        <!-- <div class="total-amount">
-                                    <div class="left">
-                                        <div class="coupon">
-                                            <form action="#" target="_blank">
-                                                <div class="form-row row justify-content-center">
-                                                    <div class="form-group col-lg-6">
-                                                        <input class="font-medium" name="Coupon" placeholder="Enter Your Coupon">
-                                                    </div>
-                                                    <div class="form-group col-lg-6">
-                                                        <button class="btn  btn-sm"><i class="fi-rs-label mr-10"></i>Apply</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-
+                                     
                         </div>
-                        <% } %>
+
                     </div>
+                    <% } %>
+                </div>
                 </div>
                 </div>
             </section>
@@ -198,116 +204,116 @@
                 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                 <script>
-     function removeFromCart(id) {
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                fetch(`/cart/removeFromCart/${id}`, {
-                    method: 'DELETE',
-                })
-                .then(response => response.json())
-                .then(response => {
-                    if (response.status) {
-                        const Toast = Swal.mixin({
-                            toast: true,
-                            position: "top-end",
-                            showConfirmButton: false,
-                            timer: 3000,
-                            timerProgressBar: true,
-                            didOpen: (toast) => {
-                                toast.onmouseenter = Swal.stopTimer;
-                                toast.onmouseleave = Swal.resumeTimer;
+                    function removeFromCart(id) {
+                        Swal.fire({
+                            title: 'Are you sure?',
+                            text: "You won't be able to revert this!",
+                            icon: 'warning',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'Yes, delete it!'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                fetch(`/cart/removeFromCart/${id}`, {
+                                    method: 'DELETE',
+                                })
+                                    .then(response => response.json())
+                                    .then(response => {
+                                        if (response.status) {
+                                            const Toast = Swal.mixin({
+                                                toast: true,
+                                                position: "top-end",
+                                                showConfirmButton: false,
+                                                timer: 3000,
+                                                timerProgressBar: true,
+                                                didOpen: (toast) => {
+                                                    toast.onmouseenter = Swal.stopTimer;
+                                                    toast.onmouseleave = Swal.resumeTimer;
+                                                }
+                                            });
+                                            Toast.fire({
+                                                title: 'Deleted!',
+                                                text: 'Your item has been removed from the cart.',
+                                                icon: 'success',
+                                            });
+
+                                            setTimeout(() => {
+                                                location.reload();
+                                            }, 3000);
+                                        } else {
+                                            Swal.fire(
+                                                'Failed!',
+                                                'Failed to remove item from cart.',
+                                                'error'
+                                            );
+                                        }
+                                    })
+                                    .catch(error => {
+                                        console.error('Error:', error);
+                                        Swal.fire(
+                                            'Failed!',
+                                            'Failed to remove item from cart.',
+                                            'error'
+                                        );
+                                    });
                             }
                         });
-                        Toast.fire({
-                            title: 'Deleted!',
-                            text: 'Your item has been removed from the cart.',
-                            icon: 'success',
-                        });
-
-                        setTimeout(() => {
-                            location.reload();
-                        }, 3000);
-                    } else {
-                        Swal.fire(
-                            'Failed!',
-                            'Failed to remove item from cart.',
-                            'error'
-                        );
                     }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    Swal.fire(
-                        'Failed!',
-                        'Failed to remove item from cart.',
-                        'error'
-                    );
-                });
-            }
-        });
-    }
 
 
-    function clearCartConfirmation() {
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, clear it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                fetch('/cart/clear', {
-                    method: 'DELETE',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.status) {
-                        Swal.fire(
-                            {
-                                title: 'Cleared!',
-                                text: 'Your cart has been cleared.',
-                                icon: 'success',
-                                timer: 3000,
-                                timerProgressBar: true,
-                                showConfirmButton: false,
+                    function clearCartConfirmation() {
+                        Swal.fire({
+                            title: 'Are you sure?',
+                            text: "You won't be able to revert this!",
+                            icon: 'warning',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: 'Yes, clear it!'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                fetch('/cart/clear', {
+                                    method: 'DELETE',
+                                    headers: {
+                                        'Content-Type': 'application/json',
+                                    },
+                                })
+                                    .then(response => response.json())
+                                    .then(data => {
+                                        if (data.status) {
+                                            Swal.fire(
+                                                {
+                                                    title: 'Cleared!',
+                                                    text: 'Your cart has been cleared.',
+                                                    icon: 'success',
+                                                    timer: 3000,
+                                                    timerProgressBar: true,
+                                                    showConfirmButton: false,
+                                                }
+                                            );
+                                            setTimeout(() => {
+                                                location.reload();
+                                            }, 3000);
+                                        } else {
+                                            Swal.fire(
+                                                'Failed!',
+                                                'Failed to clear the cart.',
+                                                'error'
+                                            );
+                                        }
+                                    })
+                                    .catch(error => {
+                                        console.error('Error:', error);
+                                        Swal.fire(
+                                            'Failed!',
+                                            'Failed to clear the cart.',
+                                            'error'
+                                        );
+                                    });
                             }
-                        );
-                        setTimeout(() => {
-                            location.reload();
-                        }, 3000);
-                    } else {
-                        Swal.fire(
-                            'Failed!',
-                            'Failed to clear the cart.',
-                            'error'
-                        );
+                        });
                     }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    Swal.fire(
-                        'Failed!',
-                        'Failed to clear the cart.',
-                        'error'
-                    );
-                });
-            }
-        });
-    }
 
                     function incrementQuantity(itemId) {
                         const currentQuantityElement = document.querySelector(`span[data-item-id="${itemId}"]`);
