--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -149,8 +149,11 @@
                                                 <div class="product-img-action-wrap">
                                                     <div class="product-img product-img-zoom">
                                                         <a href="/productdetails/<%= products[i]._id %>">
-                                                            <img class="default-img"
+                                                            <img class="default-img "
                                                                 src="/uploads/product/resized/<%= products[i].productImage[0] %>"
+                                                                alt="">
+                                                            <img class="hover-img"
+                                                                src="/uploads/product/resized/<%= products[i].productImage[1] %>"
                                                                 alt="">
 
                                                         </a>
