--- a/views/admin/addOffer.ejs
+++ b/views/admin/addOffer.ejs
@@ -34,6 +34,9 @@
 
                                 <button type="submit" class="btn btn-primary"
                                     style="display: block; margin: 0 auto;">Add Offer</button>
+                                    <br>
+                                        <div class="error-message" id="form-errors" style="text-align: center;"></div>
+
                             </form>
                         </div>
                     </div>
@@ -153,24 +156,16 @@
                                 text: 'Offer added successfully',
                             });
                             setTimeout(() => {
-                               location.reload();
+                                location.href = data.url;
                             }, 2000);
-                        } else {
-                            // Handle errors
-                            Swal.fire({
-                                title: 'Error!',
-                                text: data.message,
-                                icon: 'error',
-                            });
-                        }
+                        } 
                     })
                     .catch(err => {
                         if (err.response && err.response.data && !err.response.data.success) {
-                            Swal.fire({
-                                icon: 'error',
-                                title: 'Error',
-                                text: err.response.data.message,
-                            });
+                            const errorMessageContainer = document.getElementById('form-errors');
+                            errorMessageContainer.textContent = err.response.data.message;
+                            errorMessageContainer.classList.add('error');
+
                         } else {
                             console.error(err);
                         }
